[package]
name = "syslog"
version = "0.1.0"
authors = ["mordak <bmickael@student.42.fr>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4.19"
kernel_modules = { path = "../dependencies/kernel_modules" }
keyboard = { path = "../dependencies/keyboard" }
messaging = { path = "../dependencies/messaging" }
interrupts = { path = "../dependencies/interrupts" }
libc_binding = { path = "../dependencies/libc_binding" }
ansi_escape_code = { path = "../dependencies/ansi_escape_code" }

[dependencies.fallible_collections]
version = "0.4.8"
features = ["unstable"]
