[package]
name = "libc_binding"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = { version = "0.54.0", default-features = false , features = ["clap", "runtime", "which-rustfmt"]}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_assert = { path = "../const_assert" }
bitflags = "1.0.4"
hashbrown = "0.7.1"