[package]
name = "libc_binding"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = { version = "0.66.0", default-features = false , features = ["runtime", "which-rustfmt"]}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_assert = { path = "../const_assert" }
bitflags = "2.3.2"
hashbrown = "0.14.0"
